tests/neg/semantic_undefined_func.baa
// EXPECT: استدعاء دالة غير معرّفة
صحيح الرئيسية() {
    صحيح س = غير_معروف(١).
    إرجع س.
}

